--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test" : "meteor test --driver-package=practicalmeteor:mocha"
+    "test": "meteor test --driver-package=practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
@@ -17,5 +17,8 @@
   },
   "engines": {
     "node": "4.8.1"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2"
   }
 }
