--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.18.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.4.1",
+    "react-addons-pure-render-mixin": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-router": "^3.0.5",
+    "react-test-renderer": "^15.4.1",
     "simpl-schema": "^0.2.3"
   },
   "engines": {
     "node": "4.8.1"
   },
   "devDependencies": {
-    "expect": "^1.20.2"
+    "enzyme": "^2.8.2",
+    "expect": "^1.20.2",
+    "react-addons-test-utils": "^15.4.1"
   }
 }
