--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.4.1",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-meteor-data": "^0.2.10",
     "react-router": "^3.0.5",
     "react-test-renderer": "^15.4.1",
     "simpl-schema": "^0.2.3"
